Fri Mar 18 02:17:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (fix_zero_p, fix_even_p, fix_odd_p): remove needless
	  functions.

Fri Mar 18 02:15:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_even_p): treat Fixnum and Bignum values directly.

Fri Mar 18 02:07:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (Bignum#even?, Bignum#odd?): remove definitions
	  because they are unified with Integer#even? and Integer#odd?.

	* numeric.c (Fixnum#zero?, Fixnum#even?, Fixnum#odd?): remove
	  definitions because they are unified with Numeric#zero?,
	  Integer#even?, and Integer#odd?.

	* numeric.c (num_zero_p, int_odd_p): treat Fixnum and
	  Bignum values directly.

	* test/ruby/test_integer.rb (test_odd_p_even_p): remove meaningless
	  test case.

Fri Mar 18 01:51:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big_even_p, rb_big_odd_p): make them public functions
	  to be available in other source files.

	* include/ruby/intern.h (rb_big_even_p, rb_big_odd_p): add prototype
	  declarations.

Fri Mar 18 00:25:56 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (ary_inject_op): Implement the specialized code for sum of
	  float numbers.

Fri Mar 18 00:15:05 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* numeric.c (num_step): use rb_equal for zero check. rb_num_coerce_cmp
	  created an object which caused extra overhead.

Thu Mar 17 22:21:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): remove intermediate
	  macro, and expand for each RB_GC_GUARD.  [Fix GH-1293]

Thu Mar 17 22:08:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_specialized_instruction): move specialization
	  for opt_newarray_max/min from translation phase.

Thu Mar 17 21:52:09 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c, enum.c: make rdoc format consistent.

Thu Mar 17 21:47:57 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* NEWS: add Array#max, #min, and the optimization.  [Feature #12172]
